
<html>
  <head>
    <style type='text/css'>
      a            { color:#555555 }
      div.title    { 
          color:#1E4CBC;
          font-size:1.2em; 
          font-weight:bold; 
          margin-top:1em; 
          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#CB1D0E;
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#555555 }
      div.list     { color:#555555 }
    </style>
  </head>
  <body>
$ 0.8
  % Version 0.8-alpha
  * slow down scanning due to recent server changes
  * show pokemon filters in settings
  * catch/loot delay is now 1 min
  * use at your own risk, don't abuse, blah blah...
$ 0.7
  % Version 0.7-alpha
  * faster and improved scanning
  * use at your own risk, don't abuse, blah blah...
$ 0.6
  % Version 0.6-alpha
  * Added more anti-anti-cheats because server added some anti-cheats
  * Tap to loot pokestop
  * Reduced time wait between catch to 2 mins
$ 0.5
  % Version 0.5-alpha
  * Various of other fixes and enhancements
$ 0.4
  % Version 0.4-alpha
  * New pokemon icons
  * Various of other fixes and enhancements
$ 0.3
  % Version 0.3
  * User session improvements
$ 0.2
  % Version 0.2
  * fixed crash in setting
$ 0.1
  % Version 0.1
  * most things should work :)
$ END_OF_CHANGE_LOG
  </body>
</html>